[BUGFIX] Corrects tile spacing outside tile unit

--- a/Resources/Public/Scss/Theme/_ce_tile.scss
+++ b/Resources/Public/Scss/Theme/_ce_tile.scss
@@ -37,7 +37,7 @@
 //
 // Tile border
 //
-.pp-tile-row {
+.pp-tile-row, :not(.pp-tile-col) > .pp-tile {
   margin-left: -$pp-tile-gutter;
   margin-right: -$pp-tile-gutter;
   &:nth-of-type(1) {
